--- a/share/jeti/CHANGELOG
+++ b/share/jeti/CHANGELOG
@@ -1,8 +1,8 @@
-changes done from verison 1.1.3 to 1.2.0
+changes done from verison 1.2.0 to 1.2.1
 	changes that are a bit buggy are tabed in.
 
-	* dialog window added!
-	* nonefiletype added!
-	* logfile filepath added!
-	* small changes sytemlog/diagnosticks (diagnostiks with priority 9x is tails with informaton)
+	* bugfix, jeti can now read link paths properly!
+	* bugfix, jeti can now handle the content of void-packages/srcpkgs/ !
+	
+:D
 
